--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,20 +12,27 @@ permissions:
   id-token: write
 
 concurrency:
-  group: pages-${{ github.repository }}
+  group: pages
   cancel-in-progress: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Upload frontend folder as Pages artifact
+      - name: Setup GitHub Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload frontend folder
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./frontend    # <-- publish only frontend folder
+          path: ./frontend   # 👈 this is correct for your repo
 
       - name: Deploy to GitHub Pages
         id: deployment
